[package]
name = "movegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "string_sum"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]


[dependencies]
rand = "0.8"
regex = "1.8.4"
byteorder = "1.4.3"
pyo3 = { version = "0.19.1", features = ["extension-module"] }
numpy = "0.19"
rip_shuffle={version="0.1"}
bloomfilter = "1"
itertools = "0.12.0"
rayon = "1.8.0"
threadpool = "1.8.1"
indicatif = "0.17.7"
mktemp = "0.5.1"
